--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -20,7 +20,7 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U laravel"
+          --health-cmd="pg_isready -U postgres"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -48,9 +48,11 @@ jobs:
       - name: Configure .env for PostgreSQL
         run: |
           sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=pgsql/' .env
-          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=laravel_test/' .env
-          sed -i 's/DB_USERNAME=root/DB_USERNAME=laravel/' .env
-          sed -i 's/DB_PASSWORD=/DB_PASSWORD=secret/' .env
+          sed -i 's/DB_DATABASE=.*/DB_DATABASE=apirestful2/' .env
+          sed -i 's/DB_USERNAME=.*/DB_USERNAME=postgres/' .env
+          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=admin123/' .env
+          sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env
+          sed -i 's/DB_PORT=.*/DB_PORT=5432/' .env
 
       - name: Run migrations
         run: php artisan migrate --force
